# te-graph-runtime

./: README.md  UPSTREAM.md  pyproject.toml
docs/: custom_framework_integration.md
examples/: custom_framework_minimal.py  custom_framework_pipeline.py  optional_te_fp8.py
src/te_graph_runtime/: __init__.py  graph.py
tests/: test_cuda_runtime.py  test_docs_examples.py  test_import.py  test_te_parity.py
